<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">神经外科定位助手</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">神经外科定位助手</string>
    <string name="choosepic">选择图片</string>
    <string name="setscale">设置标度尺</string>
    <string name="enter">直接使用</string>
    <string name="confirm">确定</string>
    <string name="cancel">重置</string>
    <string name="trim">微调</string>
    <string name="rotate">旋转图片</string>
    <string name="turn">翻转图片</string>
    <string name="distance">0毫米</string>
    <string name="exitalert">再按一次退出</string>
</resources>
