<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/main_head" 
        />
    <LinearLayout 
    android:id="@+id/prell"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <Button
        android:id="@+id/choosePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn2"
        android:layout_margin="20dip"
        android:text="@string/choosepic" 
        android:textColor="@color/white"    
    />
    </LinearLayout>
   
     <RelativeLayout 
    android:id="@+id/afterll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    >
     
     	<SurfaceView  
		android:id="@+id/surfaceView"
    	android:layout_width="fill_parent" 
    	android:layout_height="fill_parent" 
        />
     	<ImageView
        android:id="@+id/iv01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />
     	<LinearLayout 
	    android:id="@+id/prell2"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    <Button
	        android:id="@+id/setScale"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/btn2"
	        android:layout_margin="20dip"
	        android:text="@string/setscale" 
	        android:textColor="@color/white"    
	        
	    />
	     <Button
	        android:id="@+id/enter"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/btn2"
	        android:layout_margin="20dip"
	        android:text="@string/enter" 
	        android:textColor="@color/white"  
	       
	    />
	    </LinearLayout>
	   <LinearLayout 
	    android:id="@+id/preUp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:visibility="gone"
	    android:orientation="horizontal">
	    <Button
	        android:id="@+id/confirm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/btn2"
	        android:layout_margin="5dip"
	        android:text="@string/confirm" 
	        android:textColor="@color/white"  
	        android:layout_weight="1"  
	    />
	    
	     <Button
	        android:id="@+id/cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/btn2"
	        android:layout_margin="5dip"
	        android:text="@string/cancel" 
	        android:textColor="@color/white"   
	        android:layout_weight="1" 
	    />
	    </LinearLayout>
	    <LinearLayout 
	    android:id="@+id/preDown"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:visibility="gone"
	    android:orientation="vertical" >
	    <Button
	        android:id="@+id/trim"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/btn2"
	        android:layout_margin="5dip"
	        android:text="@string/trim" 
	        android:textColor="@color/white"    
	    />
	    
	    </LinearLayout>
       	<ImageView 
		  android:src="@drawable/pin2"
		  android:id="@+id/ImageView"
		  android:layout_width="wrap_content" 
		  android:layout_height="wrap_content" 
		  android:visibility="gone"
		  android:layout_centerInParent="true"
		/>
        
    </RelativeLayout>
</LinearLayout>
